Added export scripts and import C functions. Updated simple example.

--- a/Examples/simple/simple.cproject.yml
+++ b/Examples/simple/simple.cproject.yml
@@ -4,9 +4,12 @@ project:
     - group: App
       files:
         - file: demo.cpp
+        - file: network.c
+        - file: ../../Common/common.c
    
   add-path:
       - ./
+      - ../../Common
 
   layers:
     - layer: $Board-Layer$
