Moved ML kernels to separate folder.

--- a/Examples/tinyllama/tinyllama.cproject.yml
+++ b/Examples/tinyllama/tinyllama.cproject.yml
@@ -13,6 +13,7 @@ project:
   layers:
     - layer: $Board-Layer$
       type: Board
+    - layer: $ML-Layer$
 
   linker:
     - script: $AC6-Link-Script$
