--- a/Examples/tinyllama/tinyllama.csolution.yml
+++ b/Examples/tinyllama/tinyllama.csolution.yml
@@ -15,6 +15,7 @@ solution:
       board: ARM::V2M-MPS3-SSE-300-FVP
       variables:
         - Board-Layer: ../../BuildConfig/layers/board/AVH_Corstone-300/Board.clayer.yml
+        - ML-Layer: ../../Kernels/Kernel.clayer.yml
         - AC6-Link-Script: ../../BuildConfig/linker_scripts/ac6_sse300_mps3_s.sct
         - GCC-Link-Script: ../../BuildConfig/linker_scripts/gcc_sse300_mps3.ld
         - CLANG-Link-Script: ../../BuildConfig/linker_scripts/clang_sse300_mps3.sct
@@ -25,6 +26,7 @@ solution:
       board: ARM::V2M-MPS3-SSE-300-FVP
       variables:
         - Board-Layer: ../../BuildConfig/layers/board/MPS3_Corstone-300/Board.clayer.yml
+        - ML-Layer: ../../Kernels/Kernel.clayer.yml
         - AC6-Link-Script: ../../BuildConfig/linker_scripts/ac6_sse300_mps3_s.sct
         - GCC-Link-Script: ../../BuildConfig/linker_scripts/gcc_sse300_mps3.ld
         - CLANG-Link-Script: ../../BuildConfig/linker_scripts/clang_sse300_mps3.sct
