Use CMSIS-DSP CPP extension for some kernels.

--- a/Kernels/Kernel.clayer.yml
+++ b/Kernels/Kernel.clayer.yml
@@ -4,8 +4,8 @@ layer:
   groups:
     - group: MLKernels
       files:
-        - file: NonLinearActivations/arm_rms_norm_f16.c
-        - file: NonLinearActivations/arm_softmax_f16.c
+        - file: NonLinearActivations/arm_rms_norm_f16.cpp
+        - file: NonLinearActivations/arm_softmax_f16.cpp
 
   add-path:
       - .
