--- a/Examples/tinyllama/tinyllama.csolution.yml
+++ b/Examples/tinyllama/tinyllama.csolution.yml
@@ -16,6 +16,7 @@ solution:
       variables:
         - Board-Layer: ../../BuildConfig/layers/board/AVH_Corstone-300/Board.clayer.yml
         - ML-Layer: ../../Kernels/Kernel.clayer.yml
+        - DSPPP: ..\..\..\cmsis\CMSIS-DSP\dsppp\Include
         - AC6-Link-Script: ../../BuildConfig/linker_scripts/ac6_sse300_mps3_s.sct
         - GCC-Link-Script: ../../BuildConfig/linker_scripts/gcc_sse300_mps3.ld
         - CLANG-Link-Script: ../../BuildConfig/linker_scripts/clang_sse300_mps3.sct
@@ -29,6 +30,7 @@ solution:
       variables:
         - Board-Layer: ../../BuildConfig/layers/board/MPS3_Corstone-300/Board.clayer.yml
         - ML-Layer: ../../Kernels/Kernel.clayer.yml
+        - DSPPP: ..\..\..\cmsis\CMSIS-DSP\dsppp\Include
         - AC6-Link-Script: ../../BuildConfig/linker_scripts/ac6_sse300_mps3_s.sct
         - GCC-Link-Script: ../../BuildConfig/linker_scripts/gcc_sse300_mps3.ld
         - CLANG-Link-Script: ../../BuildConfig/linker_scripts/clang_sse300_mps3.sct
