--- a/Kernels/Kernel.clayer.yml
+++ b/Kernels/Kernel.clayer.yml
@@ -6,6 +6,7 @@ layer:
       files:
         - file: NonLinearActivations/arm_rms_norm_f16.cpp
         - file: NonLinearActivations/arm_softmax_f16.cpp
+        - file: NonLinearActivations/arm_swiglu_f16.cpp
 
   add-path:
       - .
