Use of some Arm2D files to display text on the MPS3 LCD.
Switched to big text and balck text on white background for the tinyllama example.

--- a/Examples/simple/simple.cproject.yml
+++ b/Examples/simple/simple.cproject.yml
@@ -6,10 +6,14 @@ project:
         - file: demo.cpp
         - file: network.c
         - file: ../../Common/common.c
+        - file: ../../Common/MPS3/GLCD_MPS3.c
+        - file: ../../Common/MPS3/common.c
+        - file: ../../Common/MPS3/fpga.c
    
   add-path:
       - ./
       - ../../Common
+      - ../../Common/MPS3
 
   layers:
     - layer: $Board-Layer$
