--- a/Kernels/Kernel.clayer.yml
+++ b/Kernels/Kernel.clayer.yml
@@ -8,6 +8,15 @@ layer:
         - file: NonLinearActivations/arm_softmax_f16.cpp
         - file: NonLinearActivations/arm_swiglu_f16.cpp
 
+        - file: NonLinearActivations/arm_rms_norm_f32.cpp
+        - file: NonLinearActivations/arm_softmax_f32.cpp
+        - file: NonLinearActivations/arm_swiglu_f32.cpp
+
+        - file: MixedArithmetic/arm_copy_f8_to_f16.cpp 
+        - file: MixedArithmetic/arm_mat_vec_mult_f8_f16.cpp
+        - file: MixedArithmetic/arm_mult_f8_f16.cpp
+        - file: MixedArithmetic/arm_rms_norm_f8_f16.cpp
+
   add-path:
       - .
 
