Added speech generation

--- a/BuildConfig/layers/board/AVH_Corstone-300/Board.clayer.yml
+++ b/BuildConfig/layers/board/AVH_Corstone-300/Board.clayer.yml
@@ -43,7 +43,7 @@ layer:
   groups:
     - group: Board
       files:
-        - file: ./AVH_MPS3_Corstone_300.h
+        - file: ./AVH_Corstone_300.h
         - file: ./main.h
         - file: ./main.c
 
